---
title: "The workshop database — the schema EF Core maps onto SQLite"
---
%% Generated by `pnpm quality:report`. Edit the generator, never this file.
erDiagram
    group_actions {
        INTEGER id PK
        TEXT action_id
        INTEGER group_id FK
        INTEGER sort_order
        TEXT text
        TEXT value_id
    }
    group_assigned_values {
        INTEGER group_id PK, FK
        TEXT value_id PK
        INTEGER sort_order
    }
    group_members {
        INTEGER group_id PK, FK
        TEXT participant_id PK
        INTEGER sort_order
    }
    groups {
        INTEGER id PK
        INTEGER is_submitted
        TEXT name
        TEXT scribe_participant_id "nullable"
        TEXT session_identity FK
    }
    participants {
        TEXT id PK
        TEXT display_name
        INTEGER join_order
        TEXT session_identity FK
    }
    presentation_state {
        TEXT session_identity PK, FK
        TEXT presented_value_id "nullable"
        TEXT presenting_group_name "nullable"
        INTEGER shown_value_count
    }
    quiz_answers {
        TEXT session_identity PK, FK
        INTEGER question_index PK
        TEXT participant_id PK
        INTEGER answer_index
    }
    quiz_state {
        TEXT session_identity PK, FK
        INTEGER current_question_index "nullable"
        INTEGER is_learning_text_shown
        INTEGER is_revealed
    }
    sessions {
        TEXT identity PK
        TEXT created_at
        INTEGER current_phase
        TEXT facilitator_subject
        INTEGER is_formed
        TEXT name
        INTEGER revealed_winner_count
        INTEGER revision
    }
    top_values {
        TEXT session_identity PK, FK
        TEXT value_id PK
    }
    value_selections {
        TEXT session_identity PK, FK
        TEXT participant_id PK
        TEXT value_id PK
    }
    vote_tallies {
        TEXT session_identity PK, FK
        INTEGER round_number PK
        TEXT value_id PK
        INTEGER sort_order
        INTEGER vote_count
    }
    voted_participants {
        TEXT session_identity PK, FK
        INTEGER round_number PK
        TEXT participant_id PK
    }
    voting_round_ties {
        TEXT session_identity PK, FK
        INTEGER round_number PK
        TEXT value_id PK
        INTEGER sort_order
    }
    voting_rounds {
        TEXT session_identity PK, FK
        INTEGER round_number PK
        INTEGER allotment
        INTEGER voted_count
    }
    voting_state {
        TEXT session_identity PK, FK
        INTEGER round_number
        INTEGER round_open
    }
    winning_values {
        TEXT session_identity PK, FK
        TEXT value_id PK
        INTEGER rank
        INTEGER round_number
    }
    groups ||--o{ group_actions : "group_id"
    groups ||--o{ group_assigned_values : "group_id"
    groups ||--o{ group_members : "group_id"
    sessions ||--o{ groups : "session_identity"
    sessions ||--o{ participants : "session_identity"
    sessions ||--o{ quiz_answers : "session_identity"
    sessions ||--o{ top_values : "session_identity"
    sessions ||--o{ value_selections : "session_identity"
    sessions ||--o{ vote_tallies : "session_identity"
    sessions ||--o{ voted_participants : "session_identity"
    sessions ||--o{ voting_round_ties : "session_identity"
    sessions ||--o{ voting_rounds : "session_identity"
    sessions ||--o{ winning_values : "session_identity"
    sessions ||--o| presentation_state : "session_identity"
    sessions ||--o| quiz_state : "session_identity"
    sessions ||--o| voting_state : "session_identity"
